--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="sound-container">
-    <div class="sound">
-      <img src="birds.jpg" alt="Birds">
-      <audio src="birds.mp3" preload="auto"></audio>
-    </div>
-
-    <div class="sound">
-      <img src="mountain.jpg" alt="Forest">
-      <audio src="mountain.mp3" preload="auto"></audio>
-    </div>
-
-    <div class="sound">
-      <img src="traffic.jpg" alt="City Traffic">
-      <audio src="traffic.mp3" preload="auto"></audio>
+  <div class="gallery-container">
+    <div class="gallery">
+      <div class="image active" style="background-image: url('birds.jpg');" data-audio="birds.mp3"></div>
+      <div class="image" style="background-image: url('mountain.jpg');" data-audio="mountain.mp3"></div>
+      <div class="image" style="background-image: url('traffic.jpg');" data-audio="traffic.mp3"></div>
     </div>
   </div>
 </body>
 </html>
+
